@@ -9,6 +9,10 @@ is also provided AS IS and is probably completely unreadable.
 
 July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
 
+	* Fixed a fatal bug in the character::PutNear()
+
+July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
+
 	* StepOn effects are now applied when changing areas, too
 
 July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
